# dig-updater

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md  cliff.toml  feed-config.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  build-binaries.yml  changelog-tag.yml  ci.yml  commitlint.yml  cut-release-branch.yml  ensure-version-increment.yml  feed.yml  nightly-release.yml  release.yml
crates/dig-updater-broker/: Cargo.toml
crates/dig-updater-broker/src/: config.rs  elevation.rs  error.rs  ext_forcelist.rs  hashing.rs  health.rs  install.rs  lib.rs  lock.rs  optout.rs  pass.rs  paths.rs  persist.rs  plan.rs  proc.rs  rollback.rs  sandbox.rs  scheduler.rs  secure.rs  selfupdate.rs  service.rs  spawn.rs  state.rs  status.rs
crates/dig-updater-broker/src/scheduler/: content.rs
crates/dig-updater-broker/tests/: cut_release_branch_workflow_shape.rs  dry_check.rs  feed_workflow_shape.rs  install_pass.rs  nightly_release_workflow_shape.rs  regression_666.rs  release_workflow_shell.rs  scheduler.rs  spawn.rs
crates/dig-updater-cli/: Cargo.toml
crates/dig-updater-cli/src/: main.rs
crates/dig-updater-feedsign/: Cargo.toml
crates/dig-updater-feedsign/src/: assemble.rs  channel.rs  config.rs  error.rs  lib.rs  main.rs  resolve.rs  sign.rs  source.rs  transparency.rs  version.rs
crates/dig-updater-feedsign/tests/: end_to_end.rs
crates/dig-updater-trust/: Cargo.toml
crates/dig-updater-trust/src/: lib.rs  manifest.rs  pinned_key.rs  trust_state.rs  verify.rs
crates/dig-updater-trust/tests/: chain.rs
crates/dig-updater-worker/: Cargo.toml
crates/dig-updater-worker/src/: error.rs  feed.rs  lib.rs  main.rs  net.rs  report.rs
crates/dig-updater-worker/tests/: e2e.rs
keys/: beacon-root.pub
runbooks/: release.md
