[workspace]
resolver = "2"
# The DIG auto-update beacon workspace. The beacon is a TRANSIENT, scheduled process
# that wakes daily, performs ONE verified update pass, and exits — there is no resident
# socket. It is split into a privileged broker and an unprivileged fetch/verify worker
# so a compromise of the network-facing verify path cannot escalate to install/replace
# privilege. See SPEC.md for the normative trust contract.
#
#   * dig-updater-trust   — the SECURITY CORE (crate `dig_updater_trust`): the signed
#                           manifest + root->targets delegation types, the monotonic
#                           trust state (anti-rollback / anti-freeze / anti-downgrade),
#                           the Ed25519 signature + SHA-256 digest verify surface, and
#                           the pinned root public key. Pure, no I/O — trivially testable.
#   * dig-updater-broker  — the PRIVILEGED orchestration crate (stub): drives one update
#                           pass, spawns the worker, applies verified installs, health-gates
#                           and rolls back. (Install/rollback are follow-up tickets #504-E/-F.)
#   * dig-updater-worker  — the UNPRIVILEGED, sandboxed fetch/verify crate (stub): downloads
#                           the feed + artifacts and verifies them against the trust core,
#                           holding no install privilege. (Fetch pipeline is ticket #504-D.)
#   * dig-updater-cli     — the `dig-updater` binary (stub): `check --now` / `status --json`.
#   * dig-updater-feedsign — the CI-ONLY feed signer (crate `dig_updater_feedsign` + binary
#                           `dig-updater-feedsign`): resolves the latest release per component,
#                           assembles the signed manifest + root->targets delegation, and emits
#                           byte-exact feed JSON. It signs with the SAME `signing_bytes` the trust
#                           core verifies against, so signer and verifier can never drift. It is
#                           NEVER packaged into the shipped beacon binary (release.yml builds only
#                           `--bin dig-updater`); it lives in the workspace purely so CI builds,
#                           lints, tests, and coverage-gates it (#504-I). See SPEC.md §10.
members = [
    "crates/dig-updater-trust",
    "crates/dig-updater-broker",
    "crates/dig-updater-worker",
    "crates/dig-updater-cli",
    "crates/dig-updater-feedsign",
]

[workspace.package]
# The RELEASE version of the beacon. The tag-on-merge + version-increment CI reads this
# `[workspace.package].version` from the ROOT manifest (§3.6); the members inherit it via
# `version.workspace = true`, so a release fires off this single value.
version = "0.4.0"
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-updater"
authors = ["DIG Network"]

[workspace.dependencies]
ed25519-dalek = "2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
# `raw_value` lets the verifier capture a signed payload's EXACT received byte slice
# (`serde_json::value::RawValue`) instead of a re-serialization of the parsed struct — the
# forward-compatibility fix at the heart of #504-D (SPEC §5.4).
serde_json = { version = "1", features = ["raw_value"] }
base64 = "0.22"
hex = "0.4"
thiserror = "1"
# The worker's only network dependency: a small, blocking HTTP/HTTPS client (rustls). The
# beacon is a transient single-pass process, so blocking I/O is the right model and avoids an
# async runtime in the security-sensitive fetch path.
ureq = "2"
# OS privilege primitives for the privileged broker's sandboxed spawn + state-dir hardening.
# These live ONLY in the broker's `platform` module (the sole `unsafe` surface); every other
# crate keeps `#![forbid(unsafe_code)]`.
libc = "0.2"
# Test-only: a minimal blocking HTTP server so the fetch/verify pipeline is exercised over a
# real socket on every OS runner.
tiny_http = "0.12"
tempfile = "3"

[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
]

# Release hardening (matches dig-node/digstore): keep integer-overflow checks ON in
# release. The beacon parses an untrusted signed feed and does length/offset arithmetic
# over downloaded bytes; silent wrapping in release could turn a length bug into a
# memory/logic hazard on the privileged install path.
[profile.release]
overflow-checks = true
