[package]
name = "dig-updater-broker"
description = "DIG auto-update beacon PRIVILEGED broker: spawns the UNPRIVILEGED fetch/verify worker in a sandbox (Unix setuid-drop / Windows restricted token), persists the Admin/SYSTEM-only monotonic trust state (atomic, forward-compatible), and (in follow-ups) applies verified installs behind a health gate + rollback."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
dig-updater-trust = { path = "../dig-updater-trust" }
dig-updater-worker = { path = "../dig-updater-worker" }
# The SHARED, already-released component-resolution + Install/Update/Skip decision matrix
# (factored out of dig-installer, #508). The broker consumes `detect_installed_version` + `decide`
# so the enumeration decision is IDENTICAL to what the installer ships — never a second copy that
# could drift (SPEC §12, CLAUDE.md §4.1 release-first). Pinned to the released tag.
dig-release-resolver = { git = "https://github.com/DIG-Network/dig-release-resolver", tag = "v0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Streaming SHA-256 for the broker's independent staging re-verify + rollback-cache re-verify — it
# never trusts the worker's reported digest on the install path (SPEC §8.3).
sha2 = { workspace = true }
# The pinned root VerifyingKey the broker RE-VERIFIES each plan under (SPEC §8.3) — the broker is a
# second, independent verifier of the whole chain, not a consumer of the worker's word.
ed25519-dalek = { workspace = true }

# OS privilege primitives — the ONLY `unsafe` in the whole workspace lives in `src/sandbox.rs`,
# gated behind these per-OS deps.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tiny_http = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
