[package]
name = "dig-updater-trust"
description = "DIG auto-update beacon trust core: signed manifest + root->targets delegation types, monotonic anti-rollback/anti-freeze/anti-downgrade trust state, Ed25519 + SHA-256 verification, and the pinned root public key."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
