[package]
name = "dig-updater-worker"
description = "DIG auto-update beacon UNPRIVILEGED, sandboxed fetch/verify worker: downloads the signed feed + per-artifact bytes from untrusted URLs and verifies every one against the trust core (Ed25519 chain + streaming SHA-256 + size cap), holding NO install privilege. Emits a JSON verification report + staged verified paths."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "dig_updater_worker"
path = "src/lib.rs"

# The produced binary is `dig-updater-worker` — the network-facing process the privileged
# broker spawns UNPRIVILEGED. It reads a `WorkerRequest` on stdin, verifies against the PINNED
# root key, and writes a `WorkerReport` on stdout. It has no capability to install anything.
[[bin]]
name = "dig-updater-worker"
path = "src/main.rs"

[dependencies]
dig-updater-trust = { path = "../dig-updater-trust" }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tiny_http = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
